# DeltaDoc

./: .gitignore  Dockerfile  LAUNCH.md  LICENSE  PUBLISHING.md  README.md  llms.txt  pyproject.toml
.actor/: actor.json  input_schema.json
scripts/: run_real_sites.py
src/deltadocs/: __init__.py  __main__.py  chunk.py  cli.py  crawler.py  deliver.py  diff.py  enrich.py  extract.py  main.py  mcp_server.py  pipeline.py  schema.py
tests/: test_acceptance.py  test_chunk.py  test_crawler.py  test_deliver.py  test_diff.py  test_enrich.py  test_extract.py  test_integration.py  test_mcp.py  test_pipeline.py
