[project]
name = "deltadocs"
version = "0.4.0"
description = "Turn documentation sites into change-tracked, LLM-ready chunks; emit only what changed."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",    # data contract + JSON-schema validation (PRD §8)
    "httpx",          # crawler fetching + enrichment/webhook HTTP
    "trafilatura",    # main-content extraction -> markdown
    "markdownify",    # HTML -> markdown fallback
    "apify",          # Actor runtime, dataset + KV store, PPE
]

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4"]
chroma = ["chromadb>=0.5"]   # v3 vector-DB delivery (deliver.open_chroma_collection)
mcp = ["mcp>=1.0"]           # v3 MCP server (deltadocs-mcp)
pgvector = ["psycopg[binary]>=3", "pgvector>=0.2"]   # v3 pgvector delivery adapter
pinecone = ["pinecone>=5"]                            # v3 Pinecone delivery adapter

[project.scripts]
deltadocs = "deltadocs.cli:main"
deltadocs-mcp = "deltadocs.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
